...
        item={selectedItem}
        visible={isDetailsModalVisible}
        onClose={() => setIsDetailsModalVisible(false)}
      />

      <TouchableOpacity
        accessibilityLabel="Movimentar item"
        className="absolute bottom-6 right-6 bg-blue-600 w-14 h-14 rounded-full items-center justify-center shadow-md"
        onPress={() => router.push("/(app)/supply-room/movement")}
      >
        <Ionicons name="swap-vertical" size={24} color="#fff" />
      </TouchableOpacity>
    </View>
...
